cleanup unneeded files, add research links, bio

--- a/_Version 1.0/_config.yml
+++ b/_Version 1.0/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Mufan (Bill) Li
+name: Michael Munn
 
 # Short bio or description (displayed in the header)
 description: 
@@ -20,15 +20,15 @@ avatar: https://raw.githubusercontent.com/mufan-li/mufan-li.github.io/master/Pro
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: mufan.li@mail.utoronto.ca
+  email: mikemunn@gmail.com
   facebook:
   flickr:
-  github: mufan-li
-  instagram: mufan.li
-  linkedin: mufan-bill-li-35749833
+  github: munnm
+  instagram: munnm
+  linkedin: munnm
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: mufan_li
+  twitter: mikemunnster
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -37,14 +37,13 @@ footer-links:
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus: 
-#mufan-li
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: mufan-li.github.io
+url: munnm.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
