removed unnecessary files, typos in about.md

--- a/_Version 1.0/_config.yml
+++ b/_Version 1.0/_config.yml
@@ -10,7 +10,7 @@ description:
 #An Old-Fashioned Blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/mufan-li/mufan-li.github.io/master/Profile.jpg
+avatar: https://raw.githubusercontent.com/munnm/munnm.github.io/master/Profile.jpg
 
 #
 # Flags below are optional
