clean up research.md, about.md

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Michael Munn"
+title                    : "Michael Munn, PhD"
 title_separator          : "-"
 name                     : &name "Michael Munn"
 description              : &description ""
