fix resume link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,7 @@ main:
     url: /community/    
   
   - title: "CV"
-    url: /files/munn_resume.pdf
+    url: /files/munn_resume_june_24.pdf
     
   # - title: "Guide"
   #   url: /markdown/
